2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_alsa.c: Give snd_pcm_open a 2nd chance after
	0.2sec if it fails, because dmix tends to have problems with it when the
	device has been closed recently.

	* src/backends/alc_backend_alsa.c: Make "default" the default ALSA device.

2006-06-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Bump version to 1.1.0.

2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: Spec updates for SuSE 10.1.

	* configure.ac: Bump version to 1.1.0. This is necessary for building an
	RPM on SuSE 10.1 via y2pmbuild, because the distro already ships a
	snapshot version 1.0.x. Any lower version would be ignored when
	e.g. building freealut.

2006-05-23  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c: Extend the set of tokens recognized by alGetEnumValue a
	bit.
	
	* src/alc/alc_context.c: Faked device enumeration a bit. Announce
	ALC_ENUMERATION_EXT and ALC_EXT_CAPTURE extensions. Pretend that we are
	OpenAL 1.1, which is not fully correct yet.

2006-05-12  Sven Panne  <sven.panne@aedion.de>

	* src/al_state.c(alGetString): Following our recent change in the
	nomenclature, AL_RENDERER is now "OpenAL Sample Implementation".

	* src/al_state.c(alGetString): Fixed a bug found by valgrind: For the
	AL_EXTENSIONS query, the pointer returned was pointing to a local
	variable which was already dead. Using "static" is better, but still not
	perfect, because we are still limited to 1kB and the query is not
	thread-safe.

2006-04-23  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: move defines into config.h, fix disabled native output
	on Linux
	
	* admin/CMakeModules/FindCompilerVisibility.cmake:
	move define into config.h
	
	* src/arch/i386/mixaudio16_mmx_prk.c: optimize away one instruction for
	sign extension

2006-04-19  Sven Panne  <sven.panne@aedion.de>

	* src/al_bpool.h, src/al_buffer.h, src/al_config.h, src/al_cpu_caps.h,